<resources>
    <string name="app_name">GPGH - Interimaire</string>
    <string name="home">GPGH</string>
    <string name="prem_text">L\'application d\'interimaire qui vous correspond</string>
    <string name="boutton_inscription">S\'inscrire</string>
    <string name="boutton_connexion">Se connecter</string>
    <string name="sec_text"><![CDATA[Déjà inscrit ? Se connecter >]]></string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="ecoute_text">Des professionnels à votre écoute</string>
    <string name="boutton_creaCompte">Créer votre compte</string>
    <string name="mdp">    Mot de passe</string>
    <string name="mail">   Email</string>
    <string name="nom">   Nom</string>
    <string name="prenom">   Prénom</string>
    <string name="creaCompte_text">Créez un compte avec votre adresse email</string>
    <string name="connexion_text">Connectez-vous avec votre adresse email</string>
    <string name="typeSpinner">Type de compte</string>
    <string name="telephone">   Téléphone</string>
    <string name="confTel_text">Confirmations de votre téléphone</string>
    <string name="codeNonRecu_text">Non reçu ? Renvoyer le code ></string>
    <string name="boutton_confTel">Confirmer</string>
    <string name="codeTel">  Code à 4 chiffres</string>
    <string name="codeRecu_text">Code reçu au 06XXXXXX10</string>
    <string name="entrepriseDonnee_text">Vous êtes un employeur</string>
    <string name="nomEntreprise">  Nom de l\'entreprise</string>
    <string name="siret">  Numéro SIRET</string>
    <string name="adresse">  Adresse Postale</string>
    <string name="contactPrin_text">  Contact princial</string>
    <string name="nomComplet">  Nom Complet</string>
    <string name="service_text">Notre expertise à votre service</string>
    <string name="boutton_choixAbo">Cet abonnement</string>
    <string name="abonnement">Abonnement</string>
    <string name="boutton_payer">Payer</string>
    <string name="moyen_payer">Moyen de paiement</string>
    <string name="recap_payer">Recapitulation du prix</string>
    <string name="boutton_confirmer">Confirmation</string>
    <string name="ponctuelle">Offre Ponctuelle</string>
    <string name="renouvelable">Offre renouvelable</string>
    <string name="mensuelle">Offre mensuelle</string>
    <string name="trimestrielle">Offre trimestrielle</string>
    <string name="annuelle">Offre annuelle</string>
    <string name="semestrielle">Offre Semestrielle</string>
    <string name="tuto">Tutoriel</string>
    <string name="boutton_passer">Passer</string>
    <string name="boutton_next">Next</string>
    <string name="filtrer">Filtrer</string>
    <string name="favorie">Favorie</string>
    <string name="boutton_retour">Retour</string>
    <string name="detailsOff">Details de l\'offre</string>
    <string name="boutton_postuler">Postuler</string>
    <string name="mesCandidatures">Mes Candidatures</string>
    <string name="compte">Votre compte</string>
    <string name="boutton_supprimer">Supprimer</string>
    <string name="boutton_modifier">Modifier</string>
    <string name="creationOffre">Créer votre offre</string>
    <string name="titreOffre">Titre de l\'offre :</string>
    <string name="typePoste">Type de poste :</string>
    <string name="descriptionOffre">Description de l\'offre :</string>
    <string name="exTypePoste">ex : Stage</string>
    <string name="exTitre">ex : Stagiaire RH</string>
    <string name="boutton_suivant"><![CDATA[Suivant >]]></string>
    <string name="periodeOffre">Periode de l\'emploi</string>
    <string name="exPeriode">ex : 3 jours</string>
    <string name="lieu">Lieu</string>
    <string name="exLieu">ex : 9 rue de la Vignette, 34090 Montpellier</string>
    <string name="remuneration">Remuneration</string>
    <string name="exRemuneration">ex : 25€ - 30€</string>
    <string name="detailsOffre">Details suplémentaire (facultatif)</string>
    <string name="boutton_terminer">Terminer</string>
    <string name="postuler">Complétez votre candidature</string>
    <string name="ajoutCandidatOffre">Complément à votre candidature</string>
    <string name="boutton_envoyer">Envoyer</string>
    <string name="messagerie">Messagerie (à modifier)</string>
    <string name="modifOffre">Modification de l\'offre</string>
    <string name="titreCompte">"Le compte : "</string>
    <string name="modifCompte">Modification de votre compte</string>
    <string name="compteModif">Compte modifié</string>
    <string name="offreModif">Offre modifié</string>
    <string name="candidatureSupp">Candidature supprimée</string>
    <string name="modifCandidature">Modification de votre candidature</string>
    <string name="detailsCand">Details de votre candidature</string>
    <string name="offreCree">Creation de l\'offre</string>
    <string name="rechercher">Rechercher</string>
    <string name="filter">Filter</string>
    <string name="candidatureReff">Candidature refusée</string>
    <string name="candidatureAcc">Candidature Acceptée</string>
    <string name="candidatureModif">Candidature modifiée</string>
    <string name="boutton_refuser">Refuser</string>
    <string name="boutton_accepter">Accepter</string>
    <string name="Candidatures">Candidatures de l\'offre</string>
    <string name="boutton_candidature">Candidatures</string>
    <string name="boutton_invite">Invite</string>
    <string-array name="typeCompte">
        <item>Entreprise</item>
        <item>Candidat</item>
    </string-array>
    <string-array name="typeAbonnement">
        <item>Ponctuelle (un abonnement)</item>
        <item>Mensuelle</item>
        <item>Trimestrielle</item>
        <item>Semestrielle</item>
        <item>Annuelle</item>
        <item>Renouvelable</item>
    </string-array>
    <string-array name="filtreRecherche">
        <item>Filter</item>
        <item>Plus grand</item>
    </string-array>
</resources>