<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".InscriptionActivity">

    <TextView
        android:id="@+id/inscriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/inscription"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/EcouteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/EcouteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ecoute_text"
        android:textSize="20dp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/inscriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/CreaCompteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/creaCompte_text"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/EcouteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_boutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CreaCompteTextView"
        tools:ignore="ExtraText">

        <EditText
            android:id="@+id/prenomEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrondir_edit"
            android:hint="@string/prenom"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:inputType="text" />
        <EditText
            android:id="@+id/nomEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/nom"
            android:background="@drawable/arrondir_edit"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/mail"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/telephoneEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/telephone"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="phone" />

        <EditText
            android:id="@+id/mdpEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/mdp"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="text" />

        <Spinner
            android:id="@+id/typeCompteSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/typeSpinner"
            android:background="@drawable/arrondir_edit" />;

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_inscription">

        <Button
            android:id="@+id/boutton_creationCompte"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/boutton_creaCompte"
            android:background="@drawable/arrondir_bouton"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/secondTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sec_text"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>