<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".EntrepriseActivity">

    <TextView
        android:id="@+id/inscriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/inscription"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/employeurTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/employeurTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrepriseDonnee_text"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/inscriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_entreprise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_boutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employeurTextView"
        tools:ignore="ExtraText">

        <EditText
            android:id="@+id/nomEntrepriseEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrondir_edit"
            android:hint="@string/nomEntreprise"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:inputType="text" />
        <EditText
            android:id="@+id/numSiretEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/siret"
            android:background="@drawable/arrondir_edit"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/adresseEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/adresse"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/contactPrinTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/contactPrin_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nomCompletEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/nomComplet"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="phone" />
        <EditText
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/mail"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/telephoneEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/telephone"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="phone" />

        <EditText
            android:id="@+id/mdpEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/mdp"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_entreprise">

        <Button
            android:id="@+id/boutton_creationCompte"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/boutton_creaCompte"
            android:background="@drawable/arrondir_bouton"
            android:textSize="15sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>