<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".CreationOffre1Activity">

    <TextView
        android:id="@+id/creationOffreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/creationOffre"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/employeurTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/employeurTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrepriseDonnee_text"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/creationOffreTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_entreprise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_boutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employeurTextView"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/periodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="left"
            android:hint="@string/periodeOffre"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/periodeEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="center_vertical"
            android:background="@drawable/arrondir_edit"
            android:hint="@string/exPeriode"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/lieuTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="left"
            android:hint="@string/lieu"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/lieuEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/exLieu"
            android:background="@drawable/arrondir_edit"
            android:textSize="15sp"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/remunerationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="left"
            android:hint="@string/remuneration"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/remunerationEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/exRemuneration"
            android:background="@drawable/arrondir_edit"
            android:textSize="15sp"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/detailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="left"
            android:hint="@string/detailsOffre"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/descriptionOffreEditText"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:hint="..."
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit"
            android:inputType="textLongMessage" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_entreprise">

        <Button
            android:id="@+id/boutton_creationOffre"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/boutton_terminer"
            android:background="@drawable/arrondir_bouton"
            android:textSize="15sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>